--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "api/ai-proxy.ts": {
+      "maxDuration": 60
+    }
+  },
   "headers": [
     {
       "source": "/robots.txt",
