--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "groq-sdk": "^0.3.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.344.0",
+    "pdf-parse": "^2.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
